# kart-selector

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sorteggio_piazzola.py  sorteggio_sessione.py
pages/: sorteggio_corsia.py  sorteggio_corsia_numero.py  sorteggio_piazzola.py  sorteggio_piazzola_e_kart.py  sorteggio_sessione.py
src/: common.py
