[project]
name = "kart-selector"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Paolo Sofia", email = "paolosofia6@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "taipy>=3.1.1",
    "numpy>=1.26.4",
    "python-dotenv>=1.0.1",
    "pandas<=2.2.0",
    "gunicorn>=22.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kart_selector"]
